--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "autoprefixer": "^10.4.21",
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.6",
+    "puppeteer": "^24.17.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
