--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.6",
     "puppeteer": "^24.17.0",
